--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,8 @@
                 <textarea name="message" id="message" rows="4" required
                     placeholder="Nous sommes satisfait du service rendu, merci a l'équipe"></textarea>
             </div>
-            <button type="submit" class="btn">Envoyer</button>
+            <button class="btn-reserver" onclick="alert('Réservation à venir !')">Réserver</button>
+            <!-- <button type="submit" class="btn">Envoyer</button> -->
             <div class="social-icons">
                 <a href="#" target="_blank"><img src="images/facebook-logo.png" alt="Facebook" style="height: 55px" ;
                         width="65px" /></a>
