--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </select>
         </nav>
     </header>
-    <div class=" img">
+    <div class="img">
         <!-- <p>#Paradis</p> <br>
        <P>#Paradis</P><br>
        <p>#Paradis</p><br> -->
@@ -142,6 +142,54 @@
                 <!-- Ajoute d'autres articles -->
             </div>
         </section>
+        <section class="hotels">
+  <h2>Nos hôtels partenaires</h2>
+  <div class="hotels-list">
+    <div class="hotel-card">
+      <img src="images/hotel.jpg" alt="Hôtel Kaloum">
+      <h3>Hôtel Kaloum</h3>
+      <p>Situé au cœur de Conakry, profitez d’un confort moderne et d’un accueil chaleureux.</p>
+      <button class="btn-reserver"><a href="contact.html">Réserver</a></button>
+    </div>
+    <div class="hotel-card">
+      <img src="images/hote riviera.jpg" alt="Riviera Royal Hotel">
+      <h3>Riviera Royal Hotel</h3>
+      <p>Un établissement 5 étoiles avec piscine, spa et vue sur la mer.</p>
+      <button class="btn-reserver"><a href="contact.html">Réserver</a></button>
+    </div>
+    <div class="hotel-card">
+      <img src="images/camayenne.jpg" alt="Palm Camayenne">
+      <h3>Palm Camayenne</h3>
+      <p>Un hôtel de luxe à Conakry, idéal pour les séjours d’affaires et de loisirs.</p>
+      <button class="btn-reserver"><a href="contact.html">Réserver</a></button>
+    </div>
+    <!-- Ajoute d'autres hôtels si tu veux -->
+  </div>
+  <section class="restaurants">
+  <h2>Restaurants recommandés</h2>
+  <div class="restaurants-list">
+    <div class="restaurant-card">
+      <img src="images/Restaurant.jpg" alt="Le Jardin Gourmand">
+      <h3>Le Jardin Gourmand</h3>
+      <p>Une cuisine africaine et internationale dans un cadre verdoyant à Conakry.</p>
+      <button class="btn-reserver"><a href="contact.html">Réserver</a></button>
+    </div>
+    <div class="restaurant-card">
+      <img src="images/Restau lacity.jpg" alt="Chez Mamadou">
+      <h3>Chez Mamadou</h3>
+      <p>Spécialités guinéennes et ambiance conviviale au cœur de la ville.</p>
+      <button class="btn-reserver"><a href="contact.html">Réserver</a></button>
+    </div>
+    <div class="restaurant-card">
+      <img src="images/Restau heros.jpg" alt="La Terrasse">
+      <h3>La Terrasse</h3>
+      <p>Restaurant avec vue sur l’océan, fruits de mer et grillades au menu.</p>
+      <button class="btn-reserver" onclick="alert('Réservation à venir !')">Réserver</button>
+    </div>
+    <!-- Ajoute d'autres restaurants si tu veux -->
+  </div>
+</section>
+</section>
         <section class="partenaires">
             <h2>Nos partenaires</h2>
             <div class="partenaires-list">
